fix: bluesky icon cut off, nicer focus styles with new  button variant

--- a/src/assets/css/global/blocks/button.css
+++ b/src/assets/css/global/blocks/button.css
@@ -4,6 +4,7 @@
   --button-bg: var(--color-text);
   --button-color: color-mix(in oklab, var(--button-bg) 10%, var(--color-bg));
   --button-hover-bg: color-mix(in oklab, var(--button-bg) 90%, var(--color-bg));
+  --button-hover-color: var(--button-color);
   --button-border-width: var(--border-thickness);
   --button-border-style: solid;
   --button-border-color: color-mix(in oklab, var(--button-bg) 80%, var(--color-text));
@@ -48,11 +49,7 @@
 .button[aria-pressed='true'],
 .button[data-state='active'] {
   background: var(--button-hover-bg);
-  color: var(--button-color);
-}
-
-.button:focus {
-  outline-color: var(--button-outline-color, var(--button-border-color));
+  color: var(--button-hover-color);
 }
 
 .button:active {
@@ -103,4 +100,16 @@
 /* Radius variants */
 .button[data-button-radius='hard'] {
   --button-radius: 0;
+}
+
+.button[data-icon] {
+  --button-padding: var(--space-2xs);
+  --button-bg: var(--color-bg);
+  --button-border-color: var(--color-bg);
+  --button-color: var(--color-text);
+  --button-hover-color: var(--color-primary);
+  --button-radius: 50%;
+  aspect-ratio: 1;
+  display: inline-grid;
+  place-items: center;
 }
